added documentation to jackal

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -303,6 +303,7 @@
                                 <div class="links">
                                     <a href="https://dl.acm.org/doi/abs/10.1145/3568162.3576955" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                     <a href="https://github.com/SentientPlatypus/jackal" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
+                                    <a href="https://openreview.net/forum?id=26cYrmM9VL" target="_blank"><i class="fa-solid fa-scroll fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
                         </div>        
