--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -261,7 +261,7 @@
                     </div>
 
                     <div class="ProjectItem" id="Wholered" onclick="openThePopup('Wholered')">
-                        <img src="{{ url_for('static',filename='images/tyrannosaurusred.png') }}" alt="Lives SMP">
+                        <img src="{{ url_for('static',filename='images/wholelottared.JPG') }}" alt="Lives SMP">
                         <h3>
                             Whole Lotta Red (Red hot chilli bot)
                         </h3>
@@ -270,7 +270,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/apriltags.png') }}" alt="CODE RED" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/celebrating.JPG') }}" alt="CODE RED" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
