--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -477,12 +477,10 @@
                                 <p>
                                     After AP exams, Jun and I decided it would be really cool to create a finance firm (right now its just a tool). We thought it would be really cool to combine our skills to create a really great trading model that can be easily accessed and used by anybody. The model expands on Jun's generalized Deep reinforcement learning 
                                     approach, by adding geometric brownian motion as an indicator. I worked on experimenting with sentiment to see if it was a good indicator. Unfortunately, due to its volatility, it would not provide much advantage to the model. 
-                                    The website shows the stock price over time, the "state" of the environment over time, and finally a recommended action. (0 for short, 1 for idle, and 2 for long.). We have realized that simulation time is quite a bottleneck for website performance, so we are working to implement the model with CUDA architecture to 
-                                    really take advantage of parallel processing.
-                                    
-
-                                    Additionally, we offer models that partition money into chosen stocks that maximizes the logarithmic value of the portfolio.
-                                    TO make a model, you can pay 3 dollars.
+                                    The website shows the stock price over time, the "state" of the environment over time, and finally a recommended action. (0 for short, 1 for idle, and 2 for long.). We have realized that simulation time is quite a bottleneck for website performance
+                                    so I rewrote it with pytorch to take advantage of parallel GPU computations.
+                                    <br>
+                                    Website allows users to purchase “portfolios” which advise them on how to partition their money among chosen stocks. Utilizes firebase database, firebase authentication, and PayPal API.
                                 </p>
                             </div>
                             <div class="popupFooter">
