added linkedin LOL

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -64,6 +64,7 @@
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                         <a href="https://stackoverflow.com/users/19341357/sentient-platypus" target="_blank"><i class="fa-brands fa-stack-overflow fa-2x socialsIcon"></i></a>
                         <a href="https://www.youtube.com/channel/UC4NtIi2ufm8Jx8EDa8XaqTg" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
+                        <a href="https://www.linkedin.com/in/geneustace-wicaksono-923410287/" target="_blank"><i class="fa-brands fa-linkedin fa-2x socialsIcon"></i></a>
 
                     </div>
                     <div class="Info">
