--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -97,6 +97,7 @@
                                 Python,<br>  
                                 Rust, <br>
                                 C++, <br>
+                                Raspberry Pi + Components <br>
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
                                 R, <br>
@@ -129,6 +130,13 @@
                                 Experience
                             </h3>
                             <p>
+                                <span>Intern</span> <br>
+                                <a href="https://sonicmems.ece.cornell.edu/" target="_blank">@Cornell SonicMEMS lab</a><br>
+                                2024<br><br>  
+
+                                <span>Behavioral Experiment Developer</span> <br>
+                                <a href="https://business.cornell.edu/" target="_blank">@Cornell SC Johnson College of Business</a><br>
+                                2024<br><br>  
 
                                 <span>Research Intern</span> <br>
                                 <a href="https://www.verifiablerobotics.com" target="_blank">@Cornell Autonomous Systems Lab</a><br>
@@ -136,31 +144,15 @@
 
                                 <span>Intern</span> <br>
                                 <a href="https://www.lockheedmartin.com" target="_blank">@Lockheed Martin</a><br>
-                                2023<br><br>  
-
-                                <span>Founder</span> <br>
-                                <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
-                                2022 - now <br><br>  
+                                2023<br><br>
  
                                 <span>President</span> <br>
                                 <a href="https://sites.google.com/view/ithacastemadvocates/associates#h.p6aqjxpg6ygg" target="_blank">@IHS Dev team</a><br>
-                                2022 - now <br><br> 
+                                2022 - 2024 <br><br> 
                                 
-                                <span>Computer visions head</span> <br>
+                                <span>Computer visions head -> Mentor</span> <br>
                                 <a href="https://team639.org" target="_blank">@Code Red Robotics</a><br>
-                                2022 - now <br><br> 
-
-                                <span>Webapp developer + Cofounder</span> <br>
-                                <a href="https://www.pycalc.com/website/" target="_blank">@Pycalc X</a><br>
-                                2021 - 2022 <br><br>  
-   
-                                <span>Contributor</span> <br>
-                                <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
-                                2021 <br><br>
-
-                                <span>Video editor</span> <br>
-                                <a href="https://debating404.com" target="_blank">@Debating404</a><br>
-                                2022 <br><br>        
+                                2022 - Present <br><br> 
                             </p>
                         </div>
                         <div class="Languages">
@@ -189,8 +181,7 @@
                     <div class="quote">
                         <p>
                             <span class="quoteHead">me.<span class="function">Quote</span>()</span> <br><br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"Be kind."</span><br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Geneustace Wicaksono, 2023</span>
+                            &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"Be rootin, be tootin, and by God be shootin; but most of all, be kind."</span><br>
                         </p>
                     </div>
                 </div>
