added awards, and lunar gateway stuff

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -123,7 +123,6 @@
                                 Blender,      <br> 
                                 Davinci Resolve,<br>               
                             </p>
-
                         </div>
                         <div class="Experience">
                             <h3>
@@ -131,7 +130,7 @@
                             </h3>
                             <p>
                                 <span>Intern</span> <br>
-                                <a href="https://sonicmems.ece.cornell.edu/" target="_blank">@Cornell SonicMEMS lab</a><br>
+                                <a href="https://bigred-hacks-2024.devpost.com/?ref_feature=challenge&ref_medium=your-open-hackathons&ref_content=Recently+ended" target="_blank">@Cornell SonicMEMS lab</a><br>
                                 2024<br><br>  
 
                                 <span>Behavioral Experiment Developer</span> <br>
@@ -155,12 +154,58 @@
                                 2022 - Present <br><br> 
                             </p>
                         </div>
+                        <div class="Experience">
+                            <h3>
+                                Honors
+                            </h3>
+                            <p>
+                                <span>Amazon Future Engineer Winner</span> <br>
+                                <a href="https://www.amazonfutureengineer.com/scholarships" target="_blank">@Amazon</a><br>
+                                2024<br><br>  
+
+                                <span>Best Beginner Hack</span> <br>
+                                <a href="https://bigred-hacks-2024.devpost.com/?ref_feature=challenge&ref_medium=your-open-hackathons&ref_content=Recently+ended" target="_blank">@BigRed//Hacks</a><br>
+                                2024<br><br>  
+
+                                <span>Finalist</span> <br>
+                                <a href="https://bigred-hacks-2024.devpost.com/?ref_feature=challenge&ref_medium=your-open-hackathons&ref_content=Recently+ended" target="_blank">@BigRed//Hacks</a><br>
+                                2024<br><br>
+
+                                <span>First Robotics Dean's List Semifinalist</span> <br>
+                                <a href="https://www.team639.org/" target="_blank">@Code Red Robotics</a><br>
+                                2023<br><br>  
+                                
+                                <span>First Robotics Innovation in Control Systems Award</span> <br>
+                                <a href="https://www.team639.org/" target="_blank">@Code Red Robotics</a><br>
+                                2023<br><br>  
+
+                                <span>NASA Lunar Gateway Cargo Storing Design Challenge Semifinalist</span> <br>
+                                <a href="https://grabcad.com/library/nasa-lunar-gateway-module-1" target="_blank">@NASA GrabCad</a><br>
+                                2024<br><br>  
+
+                                <span>Cornell University Dept of CS Award</span> <br>
+                                <a href="https://drive.google.com/drive/folders/1nD_AtuKja6q2RQzLuFEGz_IkMf9el1LA" target="_blank">@Ithaca High School awards ceremony</a><br>
+                                2024<br><br>  
+
+                                <span>RIT Computing Medalist</span> <br>
+                                <a href="https://www.rit.edu/admissions/hsawards" target="_blank">@Rochester Institute of Technology</a><br>
+                                2023<br><br>  
+
+
+                                <span>Sam Lafferty Memorial Achievement Award, 2024</span> <br>
+                                <a href="https://drive.google.com/drive/folders/1nD_AtuKja6q2RQzLuFEGz_IkMf9el1LA" target="_blank">@Ithaca High School awards ceremony</a><br>
+                                2024<br><br>  
+
+                                <span>Ruth E Polson Academic Achievement Awardd</span> <br>
+                                <a href="https://drive.google.com/drive/folders/1nD_AtuKja6q2RQzLuFEGz_IkMf9el1LA" target="_blank">@Ithaca High School awards ceremony</a><br>
+                                2024<br><br>  
+                            </p>
+                        </div>
                         <div class="Languages">
                             <h3>
                                 Languages
                             </h3>
                             <p>
-
                                 <span>English</span> <br>
                                 2006 - now <br><br>  
 
@@ -527,6 +572,42 @@
                                 <div class="links">
                                     {# <a href="https://youtu.be/t8KajSXUiz8" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a> #}
                                     <a href="https://github.com/Beluga-Sturgeon" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
+                                </div>
+                            </div>
+                        </div>        
+                    </div>
+
+                    <div class="ProjectItem" id="nasalunar" onclick="openThePopup('nasalunar')">
+                        <img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/b94ef139cc3b73ad414a7a05aa3f7dad/large.png" alt="Lives SMP">
+                        <h3>
+                            Nasa Lunar Gateway Storage System
+                        </h3>
+                        <p>
+                            Semifinalist on GrabCad Challenge
+                        </p>
+                        <div class="popupData">
+                            <div class="popupBanner">
+                                <img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/b94ef139cc3b73ad414a7a05aa3f7dad/large.png" alt="CODE RED" class="popupBanner">
+                            </div>
+                            <div class="popupHead">
+                                <h3>
+                                    Nasa Lunar Gateway Storage System
+                                </h3>
+                                <div class="xContainer">
+                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
+                                </div>
+                            </div>
+                            <div class="popupContent">
+                                <p>
+                                    GrabCad design challenge. Worked with Arda Griffin and Ziqi wang. My part was to CAD the containers for the boxes.
+                                </p>
+                            </div>
+                            <div class="popupFooter">
+                                <h3>
+                                    Links:
+                                </h3>
+                                <div class="links">
+                                    <a href="https://grabcad.com/library/nasa-lunar-gateway-module-1" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
                         </div>        
