added wiring diagram

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -374,7 +374,7 @@
                         </p>
                         <div class="popupData">
                             <div class="popupBanner">
-                                <img src="{{ url_for('static',filename='images/FightRig.png') }}" alt="Octane7" class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/FIGHT RIG WIRING DIAGRAM.png') }}" alt="Octane7" class="popupBanner">
                             </div>
                             <div class="popupHead">
                                 <h3>
@@ -533,7 +533,6 @@
                             </div>
                         </div>        
                     </div>
-
 
                     <div class="ProjectItem" id="bsf" onclick="openThePopup('bsf')">
                         <img src="{{ url_for('static',filename='images/belugaSturgeon.png') }}" alt="Lives SMP">
