added verilog and shit

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -99,6 +99,7 @@
                                 C++, <br>
                                 Raspberry Pi + Components <br>
                                 Java,<br>  
+                                Verilog <br>
                                 HTML/CSS/JS,<br>  
                                 R, <br>
                                 Matlab, <br>
