--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -134,17 +134,17 @@
                                 <a href="https://bigred-hacks-2024.devpost.com/?ref_feature=challenge&ref_medium=your-open-hackathons&ref_content=Recently+ended" target="_blank">@Cornell SonicMEMS lab</a><br>
                                 2024<br><br>  
 
-                                <span>Behavioral Experiment Developer</span> <br>
-                                <a href="https://business.cornell.edu/" target="_blank">@Cornell SC Johnson College of Business</a><br>
+                                <span>Experiment Dev</span> <br>
+                                <a href="https://business.cornell.edu/" target="_blank">@Cornell SC Johnson</a><br>
                                 2024<br><br>  
-
-                                <span>Research Intern</span> <br>
-                                <a href="https://www.verifiablerobotics.com" target="_blank">@Cornell Autonomous Systems Lab</a><br>
-                                2023<br><br>  
 
                                 <span>Intern</span> <br>
                                 <a href="https://www.lockheedmartin.com" target="_blank">@Lockheed Martin</a><br>
                                 2023<br><br>
+
+                                <span>Research Intern</span> <br>
+                                <a href="https://www.verifiablerobotics.com" target="_blank">@Cornell Autonomous Systems Lab</a><br>
+                                2023<br><br>  
  
                                 <span>President</span> <br>
                                 <a href="https://sites.google.com/view/ithacastemadvocates/associates#h.p6aqjxpg6ygg" target="_blank">@IHS Dev team</a><br>
